# zugzwang

./: .gitignore  encode.py  export_onnx.py  main.py  mcts.py  model.py  pyproject.toml  search.md  server.py  test.py
worker/: Makefile  setup.sh  worker.md
worker/src/: chess.c  chess.h  infer.c  infer.h  main.c  rng.c  rng.h  search.c  search.h
worker/src/chess/: chess.c
zugzwang/: dataset.py  encode.py  infer.py  net.py  search.py  train.py
